# NUCLEO-F401RE-invpend-SPIslave-stepper

./: .gitignore  CMakeLists.txt  README.md
Core/Inc/: app_config.h  chrono.h  l6474_acceleration_control.h  main.h  pendulum_control.h  stm32f4xx_it.h
Core/Src/: chrono.c  l6474_acceleration_control.c  main.c  pendulum_control.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/BSP/Components/Common/: Release_Notes.html
Drivers/BSP/Components/l6474/: Release_Notes.html  l6474.c  l6474.h  l6474_target_config.h
Drivers/BSP/X-NUCLEO-IHMxx/: Release_Notes.html  x_nucleo_ihm01a1_stm32f4xx.c  x_nucleo_ihm01a1_stm32f4xx.h  x_nucleo_ihmxx.c  x_nucleo_ihmxx.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: claude-instructions.md
